--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,9 +8,18 @@
     <script type="text/javascript" src="script.js" defer></script>
     <title>Document</title>
 </head>
+
 <body>
-    <div class="container">
+    <h1>Etch-a-Sketch</h1>
+    <div class="btnstyle">
+        <button>Reset</button>
     </div>
-    <button class="btn">Button</button>
+    
+    <div class="body">
+        <div class="container">
+        </div>
+    </div>
+
 </body>
+
 </html>
